--- a/Apprestapp1/templates/Apprestapp1/inicio.html
+++ b/Apprestapp1/templates/Apprestapp1/inicio.html
@@ -30,9 +30,9 @@
     <h2>{{mensaje}}</h2>
     
     <ul class="ul1">
-        
+        <h2 style="text-decoration-line: overline;">Publicaciones mas recientes</h2>
         {% for restaurant in restaurants %}
-            <h2>Publicaciones mas recientes</h2>
+        
             <li class="li1">
                 <div id="numero">
                     <img id="img1" src="{{restaurant.imagen.url}}">
